--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,6 @@ body {
   font-style: italic;
 }
 
-
 /* Partners Page */
 
 .lato-thin {
@@ -101,4 +100,14 @@ body {
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
+}
+
+.custom-dashed-line {
+  display: block;
+  width: 6px;
+  height: 90px;
+  background-image: linear-gradient(to bottom, #949494 40%, transparent 10%);
+  background-position: center bottom;
+  background-repeat: repeat-y;
+  background-size: 2px 10px;
 }
