--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply font-amaranth;
+  @apply font-roboto;
 }
 
 .amaranth-regular {
@@ -102,7 +102,6 @@ body {
   font-style: normal;
 }
 
-
 .poppins-regular {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
@@ -132,7 +131,6 @@ body {
   font-weight: 900;
   font-style: normal;
 }
-
 
 .custom-dashed-line {
   display: block;
